# vk_tutorial_se

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  shader_base.frag  shader_base.vert  vcpkg.json
CMake/: FindKTX.cmake  FindVulkan.cmake  FindVulkanHpp.cmake  Findglm.cmake  Findnlohmann_json.cmake  Findstb.cmake  Findtinygltf.cmake  Findtinyobjloader.cmake
assets/: viking_room.glb  viking_room.htm  viking_room.ktx2
docs/: reference_chapter02_build_setup.md  reference_tutorial_structure.md  session_log.md  vulkan_chapter_00-02_foundations.md  vulkan_chapter_03_drawing_a_triangle.md  vulkan_implementation_plan_03_drawing_a_triangle.md  vulkan_learning_plan_00-02_foundations.md  vulkan_learning_plan_03_drawing_a_triangle.md
shaders/: shader.slang  shader_base.slang
src/: main.cpp
src/core/: SwapChain.cpp  SwapChain.h  VulkanContext.cpp  VulkanContext.h
